<resources>
    <string name="NOTIFICATION_LISTENER_SERVICE_PROCESS_NAME">:notiservice</string>
    <string name="NUGU_SERVICE_PROCESS_NAME">:aladdin</string>
    <string name="PREFKEY_TMAP_SETTING_G_USE_HUD_VIEW">PREFKEY_TMAP_SETTING_G_USE_HUD_VIEW</string>
    <string name="PREFNAME_TMAP_MAP_INFO_DISPLAY">PREFNAME_TMAP_MAP_INFO_DISPLAY</string>
    <string name="TID_CLIENT_ID">a8e3cae8-ac11-4cae-b95f-ad928cefdc9e</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="ai_1_best_all_oilstation_in_navi_result_tts" formatted="false">"원하시는 %s가 없어, 가는 길에 있는 %s%s를 찾았어요. 안내를 원하시면 '안내 시작'이라고 말씀해주세요."</string>
    <string name="aria_keyword_value">ARIA</string>
    <string name="boolean_type">bool</string>
    <string name="custom_footer_empty_view">custom_footer_empty_view</string>
    <string name="custom_footer_sound_init_view">custom_footer_sound_init_view</string>
    <string name="feature_catchCallWhileRouting">feature.catchCallWhileRouting</string>
    <string name="feature_enhanceDetectContact">feature.enhanceDetectContact</string>
    <string name="feature_minimumVoiceGuidanceOnDriving">feature.minimumVoiceGuidanceOnDriving</string>
    <string name="feature_nuguApp">feature.nuguApp</string>
    <string name="feature_nuguCallName">feature.nuguCallName</string>
    <string name="feature_nuguStartChatSound">feature.nuguStartChatSound</string>
    <string name="feature_nuguStartChatWithCallName">feature.nuguStartChatWithCallName</string>
    <string name="feature_useNugu">feature.useNugu</string>
    <string name="guidance_accidentSection">guidance.accidentSection</string>
    <string name="guidance_alternativeChange">guidance.alternativeChange</string>
    <string name="guidance_boxedSpeedTrap">guidance.boxedSpeedTrap</string>
    <string name="guidance_breakawayReroute">guidance.breakawayReroute</string>
    <string name="guidance_busOnlyLaneTrap">guidance.busOnlyLaneTrap</string>
    <string name="guidance_crossDirName">guidance.crossDirName</string>
    <string name="guidance_currentRoadName">guidance.currentRoadName</string>
    <string name="guidance_cutInTrap">guidance.cutInTrap</string>
    <string name="guidance_dischargeGasTrap">guidance.dischargeGasTrap</string>
    <string name="guidance_fixedSpeedTrap">guidance.fixedSpeedTrap</string>
    <string name="guidance_fogSection">guidance.fogSection</string>
    <string name="guidance_hipassLane">guidance.hipassLane</string>
    <string name="guidance_iceRoad">guidance.iceRoad</string>
    <string name="guidance_movableSpeedTrap">guidance.movableSpeedTrap</string>
    <string name="guidance_parkingTrap">guidance.parkingTrap</string>
    <string name="guidance_railroad">guidance.railroad</string>
    <string name="guidance_restArea">guidance.restArea</string>
    <string name="guidance_schoolZone">guidance.schoolZone</string>
    <string name="guidance_serviceArea">guidance.serviceArea</string>
    <string name="guidance_sharpCurve">guidance.sharpCurve</string>
    <string name="guidance_shoulderTrap">guidance.shoulderTrap</string>
    <string name="guidance_signalAndSpeedTrap">guidance.signalAndSpeedTrap</string>
    <string name="guidance_speedBump">guidance.speedBump</string>
    <string name="guidance_speedTrapGuideStartFrom">guidance.speedTrapGuideStartFrom</string>
    <string name="guidance_speedTrapNormalGuideStart">guidance.speedTrapNormalGuideStartFrom</string>
    <string name="guidance_speedTrapWarningVolume">guidance.speedTrapWarningVolume</string>
    <string name="guidance_speedWarningCondition">guidance.speedWarningCondition</string>
    <string name="guidance_timeBasedSpeedTrap">guidance.timeBasedSpeedTrap</string>
    <string name="guidance_timeSignal">guidance.timeSignal</string>
    <string name="guidance_tollgate">guidance.tollgate</string>
    <string name="guidance_trafficInfoCollectCamera">guidance.trafficInfoCollectCamera</string>
    <string name="guidance_trafficSignalTrap">guidance.trafficSignalTrap</string>
    <string name="integer_type">int</string>
    <string name="nugu_bluetooth_button">nugu_bluetooth_button</string>
    <string name="package_name">packageName</string>
    <string name="receive_personal_moment_info">receive_personal_moment_info</string>
    <string name="sdi_caution_category">sdi_caution_category</string>
    <string name="sdi_detail_route_category">sdi_detail_route_category</string>
    <string name="sdi_etc_category">sdi_etc_category</string>
    <string name="sdi_facility_category">sdi_facility_category</string>
    <string name="sdi_sound_category">sdi_sound_category</string>
    <string name="sdi_speed_category">sdi_speed_category</string>
    <string name="set_default_music_service">set_default_music_service</string>
    <string name="set_notice_update_info">set_notice_update_info</string>
    <string name="set_sms_notice_update_info">set_sms_notice_update_info</string>
    <string name="setting_ai_call_message_category">setting_ai_call_message_category</string>
    <string name="setting_ai_music_category">setting_ai_music_category</string>
    <string name="setting_ai_use_category">setting_ai_use_category</string>
    <string name="setting_ai_wake_up_category">setting_ai_wake_up_category</string>
    <string name="setting_nugu_button_category">setting_nugu_button_category</string>
    <string name="setting_nugu_tip_category">setting_nugu_tip_category</string>
    <string name="setting_push_noti_category">setting_push_noti_category</string>
    <string name="setting_push_noti_category_advertisement">혜택, 이벤트 및 광고</string>
    <string name="setting_push_noti_push">PUSH</string>
    <string name="setting_push_noti_sms">SMS</string>
    <string name="str_setting_detail_alternative_change">실시간 경로 변경</string>
    <string name="str_setting_detail_breakaway_reroute">경로 이탈 재탐색</string>
    <string name="str_setting_detail_cross_dir_name">방면, 교차로 명칭</string>
    <string name="str_setting_detail_current_road_name">현재 주행 도로</string>
    <string name="str_setting_detail_hipass_lane">하이패스 차로 안내</string>
    <string name="str_setting_detail_route_title">상세 길안내</string>
    <string name="str_setting_detail_service_area">휴게소 안내</string>
    <string name="str_setting_detail_tollgate">톨게이트 안내</string>
    <string name="str_setting_minimum_mode">최소 안내 모드</string>
    <string name="str_setting_minimum_mode_sub">기본 길안내와 과속 단속 안내만 받습니다.</string>
    <string name="str_setting_safe_drive_caution_black_spot">사고 다발 구간</string>
    <string name="str_setting_safe_drive_caution_children">어린이 보호구역</string>
    <string name="str_setting_safe_drive_caution_fog">안개 주의 구간</string>
    <string name="str_setting_safe_drive_caution_icy">결빙 위험 구간</string>
    <string name="str_setting_safe_drive_caution_info">주의 구간</string>
    <string name="str_setting_safe_drive_caution_railroad">철도 건널목</string>
    <string name="str_setting_safe_drive_caution_sgaoe_curve">급커브 구간</string>
    <string name="str_setting_safe_drive_caution_speed_bump">과속방지턱</string>
    <string name="str_setting_safe_drive_etc_bus_only_lane">버스전용차로 단속</string>
    <string name="str_setting_safe_drive_etc_edge_line">갓길 단속</string>
    <string name="str_setting_safe_drive_etc_gas_grade">녹색 교통지역 단속</string>
    <string name="str_setting_safe_drive_etc_info">기타 단속</string>
    <string name="str_setting_safe_drive_etc_interrupt_bust">끼어들기 단속</string>
    <string name="str_setting_safe_drive_etc_parking">주정차 단속</string>
    <string name="str_setting_safe_drive_etc_signal_violation">신호위반 단속</string>
    <string name="str_setting_safe_drive_facility_info">시설·정보</string>
    <string name="str_setting_safe_drive_facility_rest">졸음 쉼터</string>
    <string name="str_setting_safe_drive_facility_traffic_collect">교통정보 수집 구간</string>
    <string name="str_setting_safe_drive_highway_warning_start_point">고속도로 안내 시작 지점</string>
    <string name="str_setting_safe_drive_info_ad_time">시보</string>
    <string name="str_setting_safe_drive_normal_warning_start_point">일반도로 안내 시작 지점</string>
    <string name="str_setting_safe_drive_speed_box">박스형 과속 단속 경고음</string>
    <string name="str_setting_safe_drive_speed_fixed">고정식 과속 단속 경고음</string>
    <string name="str_setting_safe_drive_speed_moving">이동식 과속 단속 경고음</string>
    <string name="str_setting_safe_drive_speed_section">구간 과속 단속 경고음</string>
    <string name="str_setting_safe_drive_speed_signal">신호 과속 단속 경고음</string>
    <string name="str_setting_safe_drive_speed_sound_title">과속 단속</string>
    <string name="str_setting_safe_drive_warning_sound_condition">경고음 발성 기준</string>
    <string name="str_setting_safe_drive_warning_sound_level">경고음 볼륨</string>
    <string name="string_type">string</string>
    <string name="tmap_main_setting_item_nugu_function">NUGU에서 할 수 있는 것들</string>
    <string name="tmap_main_setting_item_nugu_tip">NUGU의 기본 사용 팁</string>
    <string name="tmap_main_setting_receive_benefit">개인 맞춤형 혜택</string>
    <string name="tmap_service">tmap_service</string>
    <string name="tmap_setting_update_version">tmap_setting_update_version</string>
    <string name="txt_setting_ai_button_title">NUGU 버튼</string>
    <string name="txt_setting_ai_device_title">기기</string>
    <string name="txt_setting_ai_drive_use">인공지능 NUGU 사용하기</string>
    <string name="txt_setting_ai_information_title">안내</string>
    <string name="txt_setting_ai_learning_contact">연락처 인식률 높이기</string>
    <string name="txt_setting_ai_phone">전화/문자</string>
    <string name="txt_setting_ai_phone_use">길안내 중 티맵으로 전화 받기</string>
    <string name="txt_setting_ai_setting_title">설정</string>
    <string name="txt_setting_ai_start_beep_use">호출 효과음</string>
    <string name="txt_setting_ai_wake_up_keyword">부르는 이름</string>
    <string name="txt_setting_ai_wake_up_use">이름을 불러 대화 시작하기</string>
    <string name="txt_setting_bugs">벅스</string>
    <string name="txt_setting_flo">FLO</string>
    <string name="txt_setting_melon">멜론</string>
    <string name="txt_setting_music_title">음악</string>
    <string name="txt_setting_selected_music">기본 음악 서비스</string>
    <string name="use_check_ai_help">use_check_ai_help</string>
    <string name="user_settings_info">user.settings.info</string>
</resources>