<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference android:title="@string/txt_setting_ai_setting_title" android:key="@string/setting_ai_use_category" app:isTextViewDivider="false">
        <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/txt_setting_ai_drive_use" android:key="@string/feature_useNugu" android:defaultValue="Y" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" app:isTextViewDivider="false" />
    </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference android:key="@string/setting_ai_wake_up_category" app:isTextViewDivider="false">
        <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/txt_setting_ai_wake_up_use" android:key="@string/feature_nuguStartChatWithCallName" android:defaultValue="Y" app:clickLogActionId="tap.voiceinvoke" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
        <com.skt.tmap.setting.fragment.customPreference.CustomDialogPreference android:title="@string/txt_setting_ai_wake_up_keyword" android:key="@string/feature_nuguCallName" android:defaultValue="@string/aria_keyword_value" app:clickLogActionId="tap.invokekeyword" app:entries="@array/setting_wakeup_keyword" app:entryValues="@array/setting_wakeup_keyword_value" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
        <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/txt_setting_ai_start_beep_use" android:key="@string/feature_nuguStartChatSound" android:defaultValue="Y" app:clickLogActionId="tap.nugusound" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
        <Preference android:layout="@layout/setting_ai_nugu_app" android:key="@string/feature_nuguApp" android:defaultValue="@string/feature_nuguApp" />
    </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference android:title="@string/txt_setting_ai_phone" android:key="@string/setting_ai_call_message_category">
        <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/txt_setting_ai_phone_use" android:key="@string/feature_catchCallWhileRouting" android:defaultValue="Y" app:clickLogActionId="tap.receive_call" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" app:isTextViewDivider="false" />
        <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/txt_setting_ai_learning_contact" android:key="@string/feature_enhanceDetectContact" android:defaultValue="Y" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" app:isTextViewDivider="false" />
    </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference android:title="@string/txt_setting_music_title" android:key="@string/setting_ai_music_category">
        <com.skt.tmap.setting.fragment.customPreference.CustomDialogPreference android:title="@string/txt_setting_selected_music" android:key="@string/set_default_music_service" android:defaultValue="1" app:clickLogActionId="tap.default_music" app:entries="@array/setting_default_music_service" app:entryValues="@array/setting_default_music_service_value" app:isPreferenceValueType="@string/integer_type" app:isTextViewDivider="false" app:isUseValue="false" />
        <com.skt.tmap.setting.fragment.customPreference.CustomSubMenuPreference android:title="@string/txt_setting_flo" android:key="@string/txt_setting_flo" app:isUseValue="false" />
        <com.skt.tmap.setting.fragment.customPreference.CustomSubMenuPreference android:title="@string/txt_setting_melon" android:key="@string/txt_setting_melon" app:isUseValue="false" />
        <com.skt.tmap.setting.fragment.customPreference.CustomSubMenuPreference android:title="@string/txt_setting_bugs" android:key="@string/txt_setting_bugs" app:isUseValue="false" />
    </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference android:title="@string/txt_setting_ai_device_title" android:key="@string/setting_nugu_button_category">
        <com.skt.tmap.setting.fragment.customPreference.CustomSubMenuPreference android:title="@string/txt_setting_ai_button_title" android:key="@string/nugu_bluetooth_button" app:clickLogActionId="tap.nugubutton" app:isTextViewDivider="false" app:isUseValue="false">
            <intent android:targetPackage="@string/package_name" android:targetClass="com.skt.tmap.activity.TmapNuguButtonPreferenceActivity" />
        </com.skt.tmap.setting.fragment.customPreference.CustomSubMenuPreference>
    </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference android:title="@string/txt_setting_ai_information_title" android:key="@string/setting_nugu_tip_category">
        <com.skt.tmap.setting.fragment.customPreference.CustomSubMenuPreference android:title="@string/tmap_main_setting_item_nugu_function" android:key="@string/use_check_ai_help" app:clickLogActionId="tap.nugu_help1" app:groupName="@string/tmap_service" app:isShowNewIcon="true" app:isTextViewDivider="false" app:isUseValue="false">
            <intent android:targetPackage="@string/package_name" android:targetClass="com.skt.tmap.activity.TmapAiHelpActivity" />
        </com.skt.tmap.setting.fragment.customPreference.CustomSubMenuPreference>
        <com.skt.tmap.setting.fragment.customPreference.CustomSubMenuPreference android:title="@string/tmap_main_setting_item_nugu_tip" app:clickLogActionId="tap.nugu_help3" app:isUseValue="false">
            <intent android:targetPackage="@string/package_name" android:targetClass="com.skt.tmap.activity.TmapMainSettingGuideDetailActivity">
                <extra android:name="SettingGuidancePage" android:value="6" />
            </intent>
        </com.skt.tmap.setting.fragment.customPreference.CustomSubMenuPreference>
    </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    <com.skt.tmap.setting.fragment.customLayout.SettingCustomView android:layout="@layout/setting_row_custom_view" android:key="@string/custom_footer_empty_view" />
</PreferenceScreen>