<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_minimum_mode" android:key="@string/feature_minimumVoiceGuidanceOnDriving" android:defaultValue="N" app:clickLogActionId="tap.minimize" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" app:isTextViewDivider="false" app:subTitle="@string/str_setting_minimum_mode_sub" />
    <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference android:title="@string/str_setting_safe_drive_speed_sound_title" android:key="@string/sdi_speed_category">
        <com.skt.tmap.setting.fragment.customPreference.CustomDialogPreference android:title="@string/str_setting_safe_drive_highway_warning_start_point" android:key="@string/guidance_speedTrapGuideStartFrom" android:defaultValue="0" app:clickLogActionId="tap.alarmdistance_highway" app:entries="@array/highway_warning_start_point_list" app:entryValues="@array/setting_int_list_3_value" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" app:isTextViewDivider="false" />
        <com.skt.tmap.setting.fragment.customPreference.CustomDialogPreference android:title="@string/str_setting_safe_drive_normal_warning_start_point" android:key="@string/guidance_speedTrapNormalGuideStart" android:defaultValue="0" app:clickLogActionId="tap.alarmdistance_normal" app:entries="@array/normal_warning_start_point_list" app:entryValues="@array/setting_int_list_2_value" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
        <com.skt.tmap.setting.fragment.customPreference.CustomDialogPreference android:title="@string/str_setting_safe_drive_warning_sound_condition" android:key="@string/guidance_speedWarningCondition" android:defaultValue="0" app:clickLogActionId="tap.alarmcondition" app:entries="@array/warning_condition_list" app:entryValues="@array/warning_condition_list_value" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
        <com.skt.tmap.setting.fragment.customPreference.CustomDialogPreference android:title="@string/str_setting_safe_drive_warning_sound_level" android:key="@string/guidance_speedTrapWarningVolume" android:defaultValue="5" app:clickLogActionId="tap.alarmvolume" app:entries="@array/setting_sdi_sound_level_kr" app:entryValues="@array/setting_sdi_sound_level_value" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
        <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference android:key="@string/sdi_sound_category" app:isTextViewDivider="false">
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_speed_fixed" android:key="@string/guidance_fixedSpeedTrap" android:defaultValue="Y" app:clickLogActionId="tap.fixedspeeding" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_speed_box" android:key="@string/guidance_boxedSpeedTrap" android:defaultValue="Y" app:clickLogActionId="tap.boxspeeding" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_speed_moving" android:key="@string/guidance_movableSpeedTrap" android:defaultValue="Y" app:clickLogActionId="tap.movingspeeding" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_speed_signal" android:key="@string/guidance_signalAndSpeedTrap" android:defaultValue="Y" app:clickLogActionId="tap.user_settings_info" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_speed_section" android:key="@string/guidance_timeBasedSpeedTrap" android:defaultValue="Y" app:clickLogActionId="tap.rangespeeding" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
        </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    <com.skt.tmap.setting.fragment.customLayout.SettingCustomFoldView android:title="@string/str_setting_safe_drive_etc_info" android:key="@string/sdi_etc_category">
        <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference app:isTextViewDivider="false">
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_etc_signal_violation" android:key="@string/guidance_trafficSignalTrap" android:defaultValue="Y" app:clickLogActionId="tap.signalviolation" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" app:isTextViewDivider="false" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_etc_bus_only_lane" android:key="@string/guidance_busOnlyLaneTrap" android:defaultValue="Y" app:clickLogActionId="tap.busonly" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_etc_interrupt_bust" android:key="@string/guidance_cutInTrap" android:defaultValue="Y" app:clickLogActionId="tap.interruption" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_etc_edge_line" android:key="@string/guidance_shoulderTrap" android:defaultValue="Y" app:clickLogActionId="tap.shoulder" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_etc_parking" android:key="@string/guidance_parkingTrap" android:defaultValue="N" app:clickLogActionId="tap.illegalparking" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_etc_gas_grade" android:key="@string/guidance_dischargeGasTrap" android:defaultValue="Y" app:clickLogActionId="tap.greencamera" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
        </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    </com.skt.tmap.setting.fragment.customLayout.SettingCustomFoldView>
    <com.skt.tmap.setting.fragment.customLayout.SettingCustomFoldView android:title="@string/str_setting_detail_route_title" android:key="@string/sdi_detail_route_category">
        <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference app:isTextViewDivider="false">
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_detail_cross_dir_name" android:key="@string/guidance_crossDirName" android:defaultValue="Y" app:clickLogActionId="tap.crossroad" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" app:isTextViewDivider="false" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_detail_current_road_name" android:key="@string/guidance_currentRoadName" android:defaultValue="Y" app:clickLogActionId="tap.roadname" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_detail_alternative_change" android:key="@string/guidance_alternativeChange" android:defaultValue="Y" app:clickLogActionId="tap.routechange" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_detail_breakaway_reroute" android:key="@string/guidance_breakawayReroute" android:defaultValue="Y" app:clickLogActionId="tap.research" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_detail_service_area" android:key="@string/guidance_serviceArea" android:defaultValue="Y" app:clickLogActionId="tap.restarea" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_detail_tollgate" android:key="@string/guidance_tollgate" android:defaultValue="Y" app:clickLogActionId="tap.tollgate" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_detail_hipass_lane" android:key="@string/guidance_hipassLane" android:defaultValue="Y" app:clickLogActionId="tap.highpass" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
        </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    </com.skt.tmap.setting.fragment.customLayout.SettingCustomFoldView>
    <com.skt.tmap.setting.fragment.customLayout.SettingCustomFoldView android:title="@string/str_setting_safe_drive_caution_info" android:key="@string/sdi_caution_category">
        <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference app:isTextViewDivider="false">
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_caution_children" android:key="@string/guidance_schoolZone" android:defaultValue="Y" app:clickLogActionId="tap.childrensafetyzone" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" app:isTextViewDivider="false" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_caution_sgaoe_curve" android:key="@string/guidance_sharpCurve" android:defaultValue="Y" app:clickLogActionId="tap.hairpincurvezone" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_caution_black_spot" android:key="@string/guidance_accidentSection" android:defaultValue="Y" app:clickLogActionId="tap.accidentzone" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_caution_fog" android:key="@string/guidance_fogSection" android:defaultValue="N" app:clickLogActionId="tap.fogzone" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_caution_railroad" android:key="@string/guidance_railroad" android:defaultValue="false" app:clickLogActionId="tap.railroad" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_caution_speed_bump" android:key="@string/guidance_speedBump" android:defaultValue="false" app:clickLogActionId="tap.speedbump" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_caution_icy" android:key="@string/guidance_iceRoad" android:defaultValue="N" app:clickLogActionId="tap.frostzone" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
        </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    </com.skt.tmap.setting.fragment.customLayout.SettingCustomFoldView>
    <com.skt.tmap.setting.fragment.customLayout.SettingCustomFoldView android:title="@string/str_setting_safe_drive_facility_info" android:key="@string/sdi_facility_category">
        <com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference app:isTextViewDivider="false">
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_facility_rest" android:key="@string/guidance_restArea" android:defaultValue="Y" app:clickLogActionId="tap.shelter" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" app:isTextViewDivider="false" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_facility_traffic_collect" android:key="@string/guidance_trafficInfoCollectCamera" android:defaultValue="Y" app:clickLogActionId="tap.trafficdatazone" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
            <com.skt.tmap.setting.fragment.customPreference.CustomSwitchPreference android:title="@string/str_setting_safe_drive_info_ad_time" android:key="@string/guidance_timeSignal" android:defaultValue="Y" app:clickLogActionId="tap.timesignal" app:groupName="@string/user_settings_info" app:isPreferenceValueType="@string/string_type" />
        </com.skt.tmap.setting.fragment.customPreference.CustomCategoryPreference>
    </com.skt.tmap.setting.fragment.customLayout.SettingCustomFoldView>
    <com.skt.tmap.setting.fragment.customLayout.SettingCustomView android:layout="@layout/setting_sound_footer" android:key="@string/custom_footer_sound_init_view" />
</PreferenceScreen>